--- a/.github/workflows/test-action.yml
+++ b/.github/workflows/test-action.yml
@@ -14,7 +14,7 @@ jobs:
       - run: ./tests/tests
 
       - name: Coveralls
-        run: coveralls 
+        run: coveralls -t ${{ secrets.coveralls_token }} --root .
        # run: coveralls -t ${{ secrets.coveralls_token }} --root . -E ".*external.*" -E ".*tests.*"
 
 
