--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -62,7 +62,7 @@ jobs:
       - run: git submodule init
       - run: git submodule update
       - run: sudo apt-get update -y && sudo apt-get install -y qt5-qmake qtbase5-dev qtchooser qtbase5-dev-tools
-      - run: qmake
+     # - run: qmake
       - name: Set up JDK 11
         uses: actions/setup-java@v1
         with:
