--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -20,6 +20,7 @@ jobs:
     - run: git submodule init
     - run: git submodule update
     - run: pip install --user cpp-coveralls
+    - run: pip install pygame
     - name: Set up Python ${{ matrix.python-version }}
       uses: actions/setup-python@v3
       with:
