--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -46,10 +46,16 @@ jobs:
 
     #
       #run: ./tests/tests
-    - name: Coveralls
+    #- name: Coveralls
       
     # run: coveralls -t ${{ secrets.COVERALLS_REPO_TOKEN }} --root . -E ".*external.*" -E ".*tests.*"
-      run: coveralls -t ${{ secrets.COVERALLS_REPO_TOKEN }} --root . -E ".*test.*"
+    #  run: coveralls -t ${{ secrets.COVERALLS_REPO_TOKEN }} --root . -E ".*test.*"
+
+    - name: Coveralls
+      uses: coverallsapp/github-action@master
+      with:
+        github-token: ${{ secrets.GITHUB_TOKEN }}
+        path--to-lcov: coverage.xml
 
 
 
