--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -51,11 +51,7 @@ jobs:
     # run: coveralls -t ${{ secrets.COVERALLS_REPO_TOKEN }} --root . -E ".*external.*" -E ".*tests.*"
     #  run: coveralls -t ${{ secrets.COVERALLS_REPO_TOKEN }} --root . -E ".*test.*"
 
-    - name: Coveralls
-      uses: coverallsapp/github-action@master
-      with:
-        github-token: ${{ secrets.GITHUB_TOKEN }}
-        path--to-lcov: coverage.xml
+   
 
 
 
@@ -66,3 +62,14 @@ jobs:
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+
+
+
+
+
+    - name: Coveralls
+      run: |
+        pip3 install --upgrade coveralls
+        coveralls --service=github --finish
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
