--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -48,9 +48,8 @@ jobs:
 
     #
       #run: ./tests/tests
-    #- name: Coveralls
-      
-    # run: coveralls -t ${{ secrets.COVERALLS_REPO_TOKEN }} --root . -E ".*external.*" -E ".*tests.*"
+    - name: Coveralls
+      run: coveralls -t ${{ secrets.COVERALLS_REPO_TOKEN }} --root . -E ".*external.*" -E ".*tests.*"
     #  run: coveralls -t ${{ secrets.COVERALLS_REPO_TOKEN }} --root . -E ".*test.*"
 
    
