--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -51,7 +51,7 @@ jobs:
     - name: Coveralls
       run: |
         pip install coveralls
-        coverage run --source=mypkg -m unittest tests/
+        coverage run --source=mypkg -m unittest tests/test.py
         coveralls
       #run: coveralls -t ${{ secrets.COVERALLS_REPO_TOKEN }} --root . -E ".*external.*" -E ".*tests.*"
     #  run: coveralls -t ${{ secrets.COVERALLS_REPO_TOKEN }} --root . -E ".*test.*"
