--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -51,8 +51,9 @@ jobs:
     - name: Coveralls
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        COVERALLS_REPO_TOKEN: ${{ secrets.COVERALLS_REPO_TOKEN }}
       run: |
-        pip install coveralls
+        # pip install coveralls
         coverage run --source=mypkg -m unittest tests/test.py
         coveralls
       #run: coveralls -t ${{ secrets.COVERALLS_REPO_TOKEN }} --root . -E ".*external.*" -E ".*tests.*"
