--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -75,5 +75,5 @@ jobs:
 
 
 
-    - name: Coveralls
-      run: coveralls -t ${{ secrets.COVERALLS_REPO_TOKEN }}
+    #- name: Coveralls
+    #  run: coveralls -t ${{ secrets.COVERALLS_REPO_TOKEN }}
