--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -53,11 +53,12 @@ jobs:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         COVERALLS_REPO_TOKEN: ${{ secrets.COVERALLS_REPO_TOKEN }}
       run: |
-        coverage run --source=mypkg -m unittest tests/test.py
+        coverage run -u -m unittest tests/test.py
         coveralls
       #run: coveralls -t ${{ secrets.COVERALLS_REPO_TOKEN }} --root . -E ".*external.*" -E ".*tests.*"
     #  run: coveralls -t ${{ secrets.COVERALLS_REPO_TOKEN }} --root . -E ".*test.*"
 # pip install coveralls
+# coverage run --source=mypkg -m unittest tests/test.py
    
 
 
