--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -50,11 +50,15 @@ jobs:
       #run: ./tests/tests
     - name: Coveralls
       env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        COVERALLS_REPO_TOKEN: ${{ secrets.COVERALLS_REPO_TOKEN }}
+       GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       run: |
-        coverage run -u -m unittest tests/test.py
-        coveralls
+       coveralls --service=github
+#      env:
+#        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+#        COVERALLS_REPO_TOKEN: ${{ secrets.COVERALLS_REPO_TOKEN }}
+#      run: |
+#        coverage run -u -m unittest tests/test.py
+#        coveralls
       #run: coveralls -t ${{ secrets.COVERALLS_REPO_TOKEN }} --root . -E ".*external.*" -E ".*tests.*"
     #  run: coveralls -t ${{ secrets.COVERALLS_REPO_TOKEN }} --root . -E ".*test.*"
 # pip install coveralls
