--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -40,8 +40,7 @@ jobs:
 
       - name: Run tests
         run: |
-          coverage run --source=. -m unittest tests/test.py
-          coverage run --source=. -m unittest tests/test_intefration.py
+          coverage run --source=. -m unittest tests/
           coverage xml
 
       - name: Upload coverage data to coveralls.io
