--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -40,7 +40,7 @@ jobs:
 
       - name: Run tests
         run: |
-          coverage run --source=. -m unittest tests/
+          coverage run --source=. -m unittest tests/test.py
           coverage xml
 
       - name: Upload coverage data to coveralls.io
